@@ -3991,10 +3991,10 @@ diff -x .svn -Nurd null/unix/bsd/bsd4.4/kfreebsd/bits/sched.h sysdeps/unix/bsd/b
 +# define CLONE_FS      0x00000200 /* Set if fs info shared between processes.  */
 +# define CLONE_FILES   0x00000400 /* Set if open files shared between processes.  */
 +# define CLONE_SIGHAND 0x00000800 /* Set if signal handlers shared.  */
-+# define CLONE_PID     0x00001000 /* Set if pid shared.  */
 +# define CLONE_PTRACE  0x00002000 /* Set if tracing continues on the child.  */
 +# define CLONE_VFORK   0x00004000 /* Set if the parent wants the child to
 +				     wake it up on mm_release.  */
++# define CLONE_SYSVSEM 0x00040000 /* share system V SEM_UNDO semantics */
 +#endif
 +
 +__BEGIN_DECLS
@@ -6215,7 +6215,7 @@ diff -x .svn -Nurd null/unix/bsd/bsd4.4/kfreebsd/clock_settime.c sysdeps/unix/bs
 diff -x .svn -Nurd null/unix/bsd/bsd4.4/kfreebsd/clone.c sysdeps/unix/bsd/bsd4.4/kfreebsd/clone.c
 --- null/unix/bsd/bsd4.4/kfreebsd/clone.c	1970-01-01 01:00:00.000000000 +0100
 +++ sysdeps/unix/bsd/bsd4.4/kfreebsd/clone.c	2006-01-02 19:10:55.000000000 +0100
-@@ -0,0 +1,101 @@
+@@ -0,0 +1,105 @@
 +/* Create a thread.
 +   Copyright (C) 2002 Free Software Foundation, Inc.
 +   This file is part of the GNU C Library.
@@ -6274,7 +6274,7 @@ diff -x .svn -Nurd null/unix/bsd/bsd4.4/kfreebsd/clone.c sysdeps/unix/bsd/bsd4.4
 +
 +  /* This implementation of clone() does not support all Linux flags.  */
 +  if (flags & ~(CSIGNAL | CLONE_VM | CLONE_FS | CLONE_FILES | CLONE_SIGHAND
-+		| CLONE_VFORK))
++		| CLONE_VFORK | CLONE_SYSVSEM))
 +    {
 +      __set_errno (EINVAL);
 +      return -1;
@@ -6297,6 +6297,10 @@ diff -x .svn -Nurd null/unix/bsd/bsd4.4/kfreebsd/clone.c sysdeps/unix/bsd/bsd4.4
 +    /* Sharing the filesystem related info (umask, cwd, root dir)
 +       is not supported by rfork.  Ignore this; let's hope programs
 +       will set their umask and cwd before spawning threads.  */
++    ;
++
++  if (flags & CLONE_SYSVSEM)
++    /* Ignore this; it has been introduced into linuxthreads in post 2.4 glibc */
 +    ;
 +
 +  if (!(flags & CLONE_FILES))
